--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="coosto_assets/images/icons/apple-touch-icon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,9 +11,8 @@
   <link rel="stylesheet"
     href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
     integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
-  <title>Coosto Lunch</title>
-</head>
+  <!-- <link rel="stylesheet" href="https:/
+  <link rel="icon" href="coosto_assets/images/icons/apple-touch-icon.png">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <a class="navbar-brand" href="#">Carousel</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -31,7 +31,8 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline [mt-2](https://jira.coosto.com/browse/mt-2) mt-md-0">
+    <form class="form-inline [mt-2](https:
+    <link rel="icon" href="coosto_assets/images/icons/apple-touch-icon.png">//jira.coosto.com/browse/mt-2) mt-md-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success [my-2](https://jira.coosto.com/browse/my-2) my-sm-0"
         type="submit">Search</button>
@@ -66,11 +67,7 @@
       <div class="card">
         <div class="card-body">
           <h2 class="boxText">
-            <i class="fas fa-chart-bar">
-            Attendance totals
-            </i>
-          </h2>
-          <div class="container" style="width: 600px; height: 300px;">
+            <link rel="icon" href="coosto_assets/images/icons/apple-touch-icon.png">dth: 600px; height: 300px;">
             <canvas id="myChart" style="width: 80%;"></canvas>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
@@ -129,9 +126,7 @@
                 <th scope="row">
                   <div class="checkbox">
                     <label>
-                      <input type="checkbox"><span class="checkbox-decorator"><span class="check"></span></span><span
-                        class="checkbox-decorator"><span class="check"></span>
-                        <div class="ripple-container"></div>
+                      <link rel="icon" href="coosto_assets/images/icons/apple-touch-icon.png">-container"></div>
                       </span>
                     </label>
                   </div>
@@ -164,10 +159,8 @@
                 <td>
                   <div class="input-group">
                     <select class="custom-select" style="border: none" id="inputGroupSelect04">
-                      <option selected>12:00</option>
-                      <option value="1">12:30</option>
-                      <option value="2">13:00</option>
-                      <option value="3">13:30</option>
+                      <option selected>1
+                        <link rel="icon" href="coosto_assets/images/icons/apple-touch-icon.png">13:30</option>
                     </select>
                   </div>
                 </td>
