--- a/survey.html
+++ b/survey.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" href="coosto_assets/images/icons/apple-touch-icon.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -41,12 +42,19 @@
 
 <body>
   <div class="container">
-    <div class="card">
+    <br>
+    <br>
+    <div class="card survey">
       <div class="card-body">
-        <h2 class="boxText">Survey</h2>
-        <h6><strong>What food would you like?</strong></h6>
-        <input class="surveyInput">
-        </input>
+        <i class="fas fa-thumbs-up"> 
+          What food would you like?
+        </i>
+        <br>
+        <br>
+        <textarea></textarea>
+        <br>
+        <br>
+        <button class="btn btn-primary btn-raised">Send suggestion</button>
       </div>
     </div>
   </div>
